# mee6

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yml  docker-image.yml
data/: quests.json
src/: bot.rs  commands.rs  deprecated_bot.rs  deprecated_commands.rs  main.rs  youtube.rs
src/bot/: bot.rs  commands.rs  driver.rs  providers.rs  regex.rs  status.rs
src/bot/providers/: soundcloud.rs  youtube.rs
src/models/: ammo.rs  mod.rs  quest.rs  task.rs
src/tarkov/: types.rs  utils.rs
src/utils/: graphql.rs  loader.rs  mod.rs  response.rs
