[package]
name = "mee6"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
regex = "1.10.5"
reqwest = "0.11"
serenity = {version = "0.12.2", features = ["client", "gateway", "rustls_backend", "model", "voice"] }
songbird = "0.4.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync"] }