[package]
name = "mee6"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
audiopus = "0.2.0"
once_cell = "1.21.3"
poise = "0.6.1"
regex = "1.10.5"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.218"
serde_json = "1.0.139"
serenity = { version = "0.12.2", features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "voice",
] }
songbird = { version = "0.5.0", features = ["driver"] }
symphonia = "0.5.4"
tokio = { version = "1.21.2", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
